--- a/css-flex/style.css
+++ b/css-flex/style.css
@@ -15,10 +15,10 @@
     display: flex;
     border: 10px solid gold;
     min-height:100vh;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    left:50%;
+    align-items: center;
   }
   
   .box{
@@ -27,10 +27,19 @@
     text-align : center;
     text-shadow : 4px 4px 0 rgba(0,0,0,0.1);
     padding: 10px;
-    position: relative; 
-    left:33%;
-  }
-  .box{
-    width: calc(31.7% - 10px);
     margin: 5px;
+  }
+  .box3{
+    font-size: 30px;
+  }
+
+  .box6{
+    font-size: 130px;
+  }
+
+  .box4{
+    font-size: 100px;
+  }
+  .box5{
+    font-size: 5px;
   }
