--- a/css-flex/style.css
+++ b/css-flex/style.css
@@ -1,39 +1,54 @@
+.box1 {
+  background: #242332;
+}
+.box2 {
+  background: #113432;
+}
+.box3 {
+  background: #a232a2;
+}
+.box4 {
+  background: #24ac21;
+}
+.box5 {
+  background: #ac2332;
+}
+.box6 {
+  background: #ce3e23;
+}
+.box7 {
+  background: #242eca;
+}
+.box8 {
+  background: #2eca32;
+}
+.box9 {
+  background: #242123;
+}
+.box10 {
+  background: #120123;
+}
 
-  
-  .box1 { background: #242332}
-  .box2 { background: #113432}
-  .box3 { background: #a232a2}
-  .box4 { background: #24ac21}
-  .box5 { background: #ac2332}
-  .box6 { background: #ce3e23}
-  .box7 { background: #242eca}
-  .box8 { background: #2eca32}
-  .box9 { background: #242123}
-  .box10 { background: #120123}
-  
-  .container {
-    display: flex;
-    border: 10px solid gold;
-    min-height:100vh;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-content: center;
-  }
-  
-  .box{
-    color: white;
-    font-size: 10px;
-    text-align : center;
-    text-shadow : 4px 4px 0 rgba(0,0,0,0.1);
-    padding: 10px;
-  }
+.container {
+  display: flex;
+  border: 10px solid gold;
+  min-height: 100vh;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-content: center;
+}
 
-  .box1{
-    flex-grow: 1;
-  }
-   .box2{
-    flex-basis: 250px;
-  }
+.box {
+  color: white;
+  font-size: 10px;
+  text-align: center;
+  text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  /*flex: flex-grow flex-shrink flex-basis;*/
+  flex: 0 1 100px;
+}
 
-  
+.box3 {
+  flex: 1;
+}
