--- a/css-flex/style.css
+++ b/css-flex/style.css
@@ -32,23 +32,23 @@
 .container {
   display: flex;
   border: 10px solid gold;
-  min-height: 100vh;
-  flex-direction: row;
+  height: 100vh;
+  flex-direction: column;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  align-content: center;
+  justify-content: flex-end;
+  /* align-content: center; */
 }
 
 .box {
   color: white;
-  font-size: 10px;
+  font-size: 6vw;
   text-align: center;
   text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.1);
-  padding: 10px;
   /*flex: flex-grow flex-shrink flex-basis;*/
-  flex: 0 1 100px;
+  padding: 1%;
+  flex: 1 1 10vw;
 }
 
-.box3 {
-  flex: 1;
+.box3, .box7 {
+  flex-grow: 10;
 }
